<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cht10_node</name>
  <version>2.0.0</version>
  <description>The cht10_node package for CHT-10 laser sensor.</description>

  <maintainer email="1271087623@qq.comd">Carl</maintainer>

  <license>BSD</license>

  <author email="1271087623@qq.comd">Carl</author>

  <url type="website">http://ros.org/wiki/cht10_node</url>
  <url type="repository">https://github.com/Playfish/cht10_node</url>
  <url type="bugtracker">https://github.com/Playfish/cht10_node/issues</url>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export> 
    <build_type>ament_cmake</build_type>
  </export>
</package>
